修复图片无法显示的问题

--- a/#5 最长回文子串.md
+++ b/#5 最长回文子串.md
@@ -4,7 +4,7 @@
 
   首先想到的思路就是爆破，虽然知道肯定不能AC但是还是想先试试。结果是通过了42/103个测试样例。
 
-  ![image-20191002210945381](/Users/kaikai/leetcode-diary/images/image-20191002210945381.png)
+  ![image-20191002210945381](./images/image-20191002210945381.png)
 
   代码也贴一下
 
