--- a/#5 最长回文子串.md
+++ b/#5 最长回文子串.md
@@ -104,4 +104,48 @@
   }
   ```
 
+- 标准dp
+
+  标准的dp会快很多，占用内存也少。思路是这样子的：用map[ i ] [ j ]记录i到j是不是一个回文数，如果map[ i ] [ j ]==true && s[ i-1 ] = s[ j+1 ]那么就可以更新map[ i-1 ] [ j+1 ]==true。
+
+  初始化需要初始化长度为1和2两种回文数（因为奇偶），然后依次更新长度为3，4...一直到len即可。代码如下：
+
+  ```cpp
+  string longestPalindrome(string s) {
+      int slen = s.length();
+      if(slen == 0 || slen == 1) return s;
+      int start=0;
+      int maxLen=1;
+      int map[slen][slen]; 
+      memset(map, 0, sizeof(map));
+      // map[i][j] means (i to j) is longestPalindrome or not
+      // init the map
+      for(int i=0;i<slen;i++)
+      {
+          map[i][i]=1;
+          if(i<slen-1 && s[i]==s[i+1]) 
+          {
+              map[i][i+1] = 1;
+              maxLen = 2;
+              start = i;
+          }
+      }
+      // dynamical update
+      for(int i=3;i<=slen;i++)
+      {
+          for(int j=0;j<slen-i+1;j++)
+          {
+              int end=j+i-1;
+              if(s[j]==s[end] && map[j+1][end-1])
+              {
+                  map[j][end]=1;
+                  start = j;
+                  maxLen = i;
+              }
+          }
+      }
+      return s.substr(start, maxLen);
+  }
+  ```
+
   
